# PyBaMM

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  Untitled.ipynb  compare-kim2011-paper.ipynb  compare.p  compare2.p  compare_electrolyte.p  compare_particles.p  convergence_spme.p  qdot_1C.p  qdot_cell_1C.p  qdot_cell_charge5C.p  requirements.txt  run-tests.py  setup.py  spm_dfn_errors.p  spm_dfn_max_errors.p  spme_dfn_errors.p
cmake/: FindMKL.cmake
docs/: index.rst
docs/install/: INSTALL-LINUX-MAC.rst  INSTALL-WINDOWS-WSL.rst  INSTALL-WINDOWS.rst
docs/source/: plotting.rst
docs/source/plotting/: interactive_plot.rst
examples/notebooks/: Delta-V.ipynb  charging-strategies.ipynb  electrode-resistance.ipynb  parameter-values.ipynb
examples/notebooks/Getting Started/: Tutorial 2 - Setting Parameter Values.ipynb  Tutorial 3 - Basic Plotting.ipynb
examples/scripts/: 1plus1D.py  2plus1D.py  DFN.py  SPM_compare_particle_grid.py  _matplotlibrc  basic_csp_test.py  c_rates.py  compare_isothermal_and_thermal.py  convergence-test.py  csP_SPMe_DFN_electrolyte_com[are.py  csP_SPMe_DFN_electrolyte_compare.py  ddlion.py  drive_cycle.py  ec-run.py  ecker_comparison.py  ecker_set.py  ecker_set_times.py  figure9.py  kim_compare.py  pouch-converge.py  qdot_cell.py  run_simulation.py  spm-convergence.py  spme-convergence.py  spme_1p1d_convergence.py
examples/scripts/experimental_protocols/: cccv.py
pybamm/: __init__.py  quick_plot.py  simulation.py
pybamm/discretisations/: discretisation.py
pybamm/expression_tree/: symbol.py
pybamm/expression_tree/operations/: evaluate_julia.py
pybamm/geometry/: ec_geometry.py
pybamm/input/drive_cycles/: Artemis_Motorway.csv  LGM50.csv  US06.csv  panasonic.csv
pybamm/meshes/: zero_dimensional_submesh.py
pybamm/models/: base_model.py
pybamm/models/equivalent_circuit_models/: __init__.py  base_equivalent_circuit_model.py  resistor.py
pybamm/models/full_battery_models/: base_battery_model.py
pybamm/models/full_battery_models/lithium_ion/: __init__.py  basic_csp.py  basic_dfn.py  basic_spm.py  basic_spme.py  spme.py
pybamm/models/submodels/circuit_elements/: __init__.py  ocv.py  (+3 more)
pybamm/parameters/: equivalent_circuit_parameters.py  parameter_sets.py  parameter_values.py  standard_parameters_lithium_ion.py  thermal_parameters.py
pybamm/plotting/: interactive_plot.py  quick_plot.py
pybamm/solvers/: algebraic_solver.py  daecpp_dae_solver.py  idaklu_solver.py  scikits_dae_solver.py  scikits_ode_solver.py  scipy_solver.py
results/benchmarking/: README.md  deploy.sh  time_models_and_solvers.py
src/: dae-wrapper.cpp
tests/unit/: test_simulation.py
tests/unit/test_discretisations/: test_discretisation.py
tests/unit/test_solvers/: test_daecpp_solver.py
(+27 files in other folders)
